<resources>
    <string name="app_name">SimpleTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="alert1">You pressed button 1!</string>
    <string name="alert2">You pressed button 2!</string>
    <string name="alert3">You pressed button 3!</string>
</resources>
